--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "rc": "1.0.1",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
-    "sails-hook-email": "^0.12.1"
+    "sails-hook-email": "^0.12.1",
+    "sails-postgresql": "^0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
